--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Dice Roller</string>
     <string name="roll_dice">Roll Dice</string>
     <string name="count_up">Count Up</string>
+    <string name="clear">Clear</string>
 </resources>
